<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_recentlyRead"
            android:icon="@drawable/ic_history_white_36dp"
            android:checked="true"
            android:title="@string/nav_recentlyRead" />
        <item
            android:id="@+id/nav_bookshelf"
            android:icon="@drawable/ic_description_white_36dp"
            android:title="@string/nav_bookshelf" />
        <item
            android:id="@+id/nav_local"
            android:icon="@drawable/ic_folder_open_white_36dp"
            android:title="@string/nav_local" />
        <item
            android:id="@+id/nav_online"
            android:icon="@drawable/ic_language_white_36dp"
            android:title="@string/nav_online" />
    </group>

    <item android:title="其他">
        <menu>
            <item
                android:id="@+id/nav_adout"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_about" />
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="切换主题" />-->
        </menu>
    </item>

</menu>
